# steganography

./: CMakeLists.txt  main.cpp
Controller/: ArgumentController.cpp  ArgumentController.h  BaseController.cpp  BaseController.h  FlagController.cpp  FlagController.h
Enums/: Error.h  Extension.h  Flag.h
Model/: Bmp.cpp  Bmp.h  BmpHeader.h  Image.cpp  Image.h  Message.cpp  Message.h  Pixels.cpp  Pixels.h  Ppm.cpp  Ppm.h
View/: CommandLineInterface.cpp  CommandLineInterface.h
